syntax = "proto3";
package kratos.api;

option go_package = "vw_user/internal/conf;conf";

import "google/protobuf/duration.proto";

message Bootstrap {
    Server server     = 1;
    Data data         = 2;
    JWT jwt           = 3;
    Email email       = 4;
    Registry registry = 5;
}

message Server {
    message HTTP {
        string network                   = 1;
        string addr                      = 2;
        google.protobuf.Duration timeout = 3;
    }
    message GRPC {
        string network                   = 1;
        string addr                      = 2;
        google.protobuf.Duration timeout = 3;
    }
    HTTP http = 1;
    GRPC grpc = 2;
}

message Data {
    message Mysql {
        string host     = 1;
        string port     = 2;
        string user     = 3;
        string password = 4;
        string database = 5;
        int32 max_idle  = 6;
        int32 max_open  = 7;
        int32 log_level = 8;
    }
    message Redis {
        string host                            = 1;
        string port                            = 2;
        string password                        = 3;
        int32 db                               = 4;
        google.protobuf.Duration dial_timeout  = 5;
        google.protobuf.Duration read_timeout  = 6;
        google.protobuf.Duration write_timeout = 7;
    }
    message Mongo {
        string host                           = 1;
        string port                           = 2;
        string db                             = 3;
        string password                       = 4;
        int32 max_open                        = 5;
        google.protobuf.Duration conn_timeout = 6;
    }
    Mysql mysql = 1;
    Redis redis = 2;
    Mongo mongo = 3;
}

message JWT {
    string secret                  = 1;
    int64 access_token_expiration  = 2;
    int64 refresh_token_expiration = 3;
}
message Email {
    string smtp_host       = 1;
    int32 smtp_port        = 2;
    string smtp_username   = 3;
    string smtp_password   = 4;
    string smtp_servername = 5;
}
message Registry {
    message Consul {
        string address = 1;
        string scheme  = 2;
    }
    Consul consul = 1;
}